  instead of trying to cast an empty skill ID
- "Monster x changed to y" message no longer displays blank y
- Check for numeric argument in Commands::cmdUseSkill.
- Fix crash in party check of positionNearPlayer().
- Fix crash in calculating exp gained %.
- Fixed bug in "cartGet" AI sequence
- Fixed the location of the AI_post plugin hook

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).
- Some parseMsg messages moved to parseMsg_presence.
- Improved lockMap and randomWalk settings. Without route_randomWalk,
  lockMap_randX/Y modify the lockMap_x/y position by a random amount. If
  route_randomWalk is set, lockMap_x/y and lockMap_randX/Y specify the area
  in which randomWalk should walk.
- Automatically remove player entries, when that player is more than 35 blocks
  away. Sometimes players don't get removed from the list for some reason.
- Detect what weapon (later shield) people are using.
- "Player Info" message domain is now parseMsg_presence instead of parseMsg
- itemName()/itemNameSimple() function now returns "None" for item #0

Credits:
- Joseph: -1 and 2 attack-auto support in mon_control.txt,
  avoidList_inLockOnly
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters,
  shop timeout in X-Kore bugfix (bug #49), sitAuto_idle vs
  shopAuto_open conflict fix (bug #50), other misc bugfixes.
- fov: writeDataFile*() tweaks, lockMap and randomWalk tweaks,
  partySkills for certain jobs
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)
- sparshong: character creation/deletion packet code.
- jsteng, littlewens: mute packet support, chat room list clear bugfix.